--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,10 @@
   background-color: #ddd;
 }
 
+.K2-grid li a:hover{
+  background-color: #ddd;
+}
+
 /* --------- */
 
 @import url('https://fonts.googleapis.com/css?family=Heebo:400,700|Open+Sans:400,700');
