--- a/css/style.css
+++ b/css/style.css
@@ -132,25 +132,25 @@
     position: relative;
 }
 
-.header-nav .nav-btn .subnav-languages{
+/* .header-nav .nav-btn .subnav-languages{
     position: absolute;
     background-color: #424245;
-}
+} */
 
 .nav-btn li{
     position: relative;
 }
 
-.nav-btn .subnav-languages{
+/* .nav-btn .subnav-languages{
     position: absolute;
     background-color: brown;
     width: 150px;
     display: none;
-}
+} */
 
-.nav-btn li:hover .subnav-languages{
+/* .nav-btn li:hover .subnav-languages{
     display: block;
-}
+} */
 
 .headertopbar-right span{
     text-transform: lowercase;
@@ -193,23 +193,27 @@
   }
   
 .K2-grid li a {
-      display: block;
-      text-decoration: none;
-      color: #00a0a3;
-  }
+  display: block;
+  text-decoration: none;
+  color: #00a0a3;
+}
   
 .K2-grid li svg {
-      margin: 3px 0;
-      width: 35px;
-      height: 35px;
-      fill: #00d4c9;
-      display: inline-block;
-  }
+  margin: 3px 0;
+  width: 35px;
+  height: 35px;
+  fill: #00d4c9;
+  display: inline-block;
+}
   
 .K2-grid li span {
-      display: block;
-      padding: 0 3px;
-  }
+  display: block;
+  padding: 0 3px;
+}
+
+.K2-grid li:hover{
+  background-color: #ddd;
+}
 
 .K2-grid li:hover{
   background-color: #ddd;
@@ -510,3 +514,8 @@ h2 {
     bottom: 0;
     left: 0;
 }
+
+/* .g-footer .icon-social li{
+  list-style-type: none;
+  display: inline-block;
+} */
